[package]
name = "files"
version = "0.1.0"
authors = ["Dov Kruger <Dov.Kruger@stevens.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "open_dict"
path = "open_dict.rs"

[[bin]]
name = "args"
path = "args.rs"

[[bin]]
name = "spellcheck"
path = "spellcheck.rs"
